# zkane

./: .gitignore  Cargo.toml  README.md  TESTING_FIX_SUMMARY.md  TEST_SUITE_SUMMARY.md  ZKane_Implementation_Plan.md  ZKane_Professional_Design_Specification.md  ZKane_Visual_Design_Mockups.md  build.rs
.cargo/: config.toml
.github/workflows/: aurora-flame-catalyst.yml  deploy.yml
alkanes/zkane/: Cargo.toml
alkanes/zkane-factory/: Cargo.toml
alkanes/zkane-factory/src/: lib.rs  tests.rs
alkanes/zkane-pool/: Cargo.toml
alkanes/zkane-pool/src/: lib.rs  tests.rs
alkanes/zkane/src/: lib.rs
config/: cloudbuild.yaml  ethereal-nexus-build.yaml  trigger-config.yaml
crates/test-harness/: Cargo.toml
crates/test-harness/tests/: integration_test.rs
crates/zkane-cli/: Cargo.toml
crates/zkane-cli/src/: main.rs
crates/zkane-common/: Cargo.toml
crates/zkane-common/src/: lib.rs
crates/zkane-core/: Cargo.toml
crates/zkane-core/src/: lib.rs  mock_provider.rs
crates/zkane-crypto/: Cargo.toml
crates/zkane-crypto/src/: hash.rs  lib.rs  merkle.rs  poseidon.rs  poseidon_params.rs  zkp.rs
crates/zkane-crypto/src/gadgets/: mod.rs  poseidon.rs
crates/zkane-crypto/src/zkp/: poseidon_params.rs
crates/zkane-frontend/: Cargo.toml  FRONTEND_FIX_SUMMARY.md  README.md  STYLING_COMPLETION_SUMMARY.md  Trunk.toml  build.rs  dark-mode-test.html  history-card-test.html  index.html  loading-test.html  setup-assets.sh  test.html
crates/zkane-frontend/src/: app.rs  components.rs  lib.rs  lib_testable.rs  services.rs  styles.css  types.rs  utils.rs  wasm_bindings.rs
crates/zkane-frontend/src/components/: about.rs  deposit.rs  help.rs  history.rs  notifications.rs  pool_list.rs  settings.rs  utils.rs  withdraw.rs
crates/zkane-frontend/tests/: basic_only.rs  component_tests.rs  isolated_test.rs  leptos_context.rs  leptos_simple.rs  leptos_working.rs  minimal.rs  simple.rs  web.rs
crates/zkane-wasm/: Cargo.toml
crates/zkane-wasm/src/: lib.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
noir/withdraw/: Nargo.toml
noir/withdraw/src/: main.nr
scripts/: build-frontend.sh  deploy-zkane.sh  dev.sh  invoke-aurora-flame-catalyst.sh  safe-test.sh  test-all.sh  test-clean.sh  test-native-only.sh
src/: lib.rs  trace_demo.rs
src/tests/: comprehensive_zkane_tests.rs  edge_case_tests.rs  end_to_end_flow_tests.rs  factory_integration.rs  frontend_component_tests.rs  frontend_integration_tests.rs  helpers.rs  mod.rs  performance_tests.rs  privacy_pool_tests.rs  security_tests.rs  wasm_integration.rs  zkane_e2e_comprehensive.rs  zkane_indexer_verification_test.rs  zkane_integration.rs  zkane_wasm_minimal.rs  zkane_withdrawal_verification_test.rs
src/tests/std/: mod.rs  zkane_factory_build.rs  zkane_pool_build.rs
