[package]
name = "zkane"
version = "0.1.0"
edition = "2021"
description = "Privacy pool for alkanes assets using zero-knowledge proofs"
license = "MIT"
repository = "https://github.com/zkane-project/zkane"

[workspace]
members = [
    "crates/zkane-common",
    "crates/zkane-crypto",
    "crates/zkane-core",
    "crates/zkane-frontend",
]

[workspace.dependencies]
# Alkanes framework - using v0.5.1 tag
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/v0.5.2", features = ["test-utils"] }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/v0.5.2" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/v0.5.2" }
alkanes-macros = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/v0.5.2" }

# Protorune dependencies - using v0.5.1 tag
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/v0.5.2", features = ["test-utils"] }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/v0.5.2" }

# Metashrew dependencies - using v0.5.1 tag
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", branch = "kungfuflex/v9.0.0-rc6" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew", branch = "kungfuflex/v9.0.0-rc6" }

# Deezel Web
deezel-web = { path = "/home/ubuntu/deezel/crates/deezel-web" }
 
 # Bitcoin and cryptography
 bitcoin = "0.32"
sha2 = "0.10"
blake2 = "0.10"
hex = "0.4"
rand = "0.8"

# Arkworks cryptography
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"

# WASM and web dependencies
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async and utilities
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
once_cell = "1.0"

# Testing dependencies
wasm-bindgen-test = "0.3.42"
hex_lit = "0.1"


# Ordinals - using v0.5.1 tag
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", tag = "v0.5.1" }

# Protobuf
protobuf = "3.0"

# Math utilities
ruint = "1.0"

[dependencies]
# Core ZKane crates
zkane-common = { path = "crates/zkane-common" }
zkane-crypto = { path = "crates/zkane-crypto" }
zkane-core = { path = "crates/zkane-core" }

# Only alkanes-support for ID types (not full alkanes framework)
alkanes-support = { workspace = true }

# Bitcoin and cryptography
bitcoin = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
anyhow.workspace = true
thiserror = { workspace = true }

# Async and utilities
tokio = { workspace = true }

# Protobuf
protobuf = { workspace = true }

# Testing dependencies
[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = ["std"]
std = []

# WASM-specific configuration
[lib]
crate-type = ["cdylib", "rlib"]

# Optimization for WASM builds
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# WASM-pack configuration
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
