[package]
name = "zkane-factory"
version = "0.1.0"
edition = "2021"
description = "ZKane factory contract for spawning privacy pools"
authors = ["ZKane Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zkane-common = { path = "../../crates/zkane-common" }
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
alkanes-macros = { workspace = true }
metashrew-support = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
alkanes-runtime = { workspace = true, features = ["test-utils"] }
once_cell = { workspace = true }
wasm-bindgen-test = { workspace = true }
hex_lit = { workspace = true }

[features]
default = []
test-utils = []