[package]
name = "zkane-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for ZKane privacy pools"
authors = ["ZKane Team"]

[dependencies]
zkane-common = { path = "../zkane-common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
rand = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-snark = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["crh", "sponge"] }

[dev-dependencies]
hex_lit = { workspace = true }