[package]
name = "zkane-frontend"
version = "0.1.0"
edition = "2021"
description = "ZKane Privacy Pool Frontend - Full-stack Rust web application"
authors = ["ZKane Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# WASM and browser APIs
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { version = "0.3", features = [
  "console", "Window", "Document", "Element", "HtmlElement",
  "HtmlInputElement", "HtmlButtonElement", "HtmlSelectElement",
  "Event", "EventTarget", "MouseEvent", "InputEvent",
  "Response", "Request", "RequestInit", "Headers",
  "Crypto", "SubtleCrypto", "CryptoKey", "Blob", "BlobPropertyBag",
  "Url", "HtmlAnchorElement", "Storage", "Location",
  "Clipboard", "Navigator"
] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Error handling and utilities
anyhow = { workspace = true }
thiserror = "1.0"
hex = { workspace = true }
uuid = { version = "1.0", features = ["v4", "js"] }
sha2 = { workspace = true }

# Logging and debugging
log = "0.4"
console_log = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }

# Random number generation for browser
rand = { workspace = true, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# Time utilities
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-file = "0.3.0"

# Deezel Web
deezel-web = { workspace = true }
deezel-common = { workspace = true }
 
 # Development and testing dependencies
 [dev-dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3"
pretty_assertions = "1.4"

[features]
default = ["console_error_panic_hook"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
testable = []