[package]
name = "zkane-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for ZKane privacy pools - browser dapp integration"
authors = ["ZKane Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zkane-common = { path = "../zkane-common" }
zkane-crypto = { path = "../zkane-crypto" }
zkane-core = { path = "../zkane-core" }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
  "Crypto",
  "CryptoKey",
  "SubtleCrypto",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
alkanes-support = { workspace = true }


[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
